src/test/pass/default_when_returning.ly
function f( => list[integer]) {
	return []
}
