src/test/fail/method_list_arg_redeclaration.ly
<@lily method m(list[integer] a, list[integer] a):nil {} @>
